--- a/SimpleFacebookRegistrationHandler.cls
+++ b/SimpleFacebookRegistrationHandler.cls
@@ -6,7 +6,7 @@ global class SimpleFacebookRegistrationHandler implements Auth.RegistrationHandl
     private static final String ORG_SUFFIX = '.sso.badge.org';
     private static final String DEFAULT_ACCOUNTNAME = 'Customers';
     private static final String EXTERNAL_USER_PROFILE = 'Customers';
-    private static final String INTERNAL_USER_PROFILE = 'Standard User';    
+    private static final String INTERNAL_USER_PROFILE = 'System Administrator';    
     
 /**
  * Let anyone register as long as the required fields are supplied
